src/components/select/select.component.scss
@import "colors/index";
@import "forms/inputs";
@import "input/input.component";

$color-group-bg: #282e40;
$color-dropdown-bg: $color-bg-dark;
$color-hover-bg: $color-bg-med;
$color-placeholder-text: $color-text-med;
$color-caret-bg: $color-text-med;
$color-filter-bg: #2d3242;
$color-filter-text: #ccc;
$color-empty-text: #ccc;
$color-chip-bg: $color-blue-med;
$color-chip-hover-bg: $color-blue;
$color-chip-text: $color-white;

.ngx-select {
  position: relative;
  display: inline-block;
  min-width: 300px;

  // dropdown active
  &.active {
    .ngx-select-input {   
      .ngx-select-input-underline {
        .underline-fill {
          width: 100%;
        }
      }

      .ngx-select-caret {
        transition: transform 200ms ease-in-out;
        transform: rotate(180deg) translateY(50%);
      }
    }

    .ngx-select-dropdown {
      display: block;
      opacity: 1;
      animation: openAnimation 0.25s;
    }
  }

  &.disabled {
    .ngx-select-input {
      .ngx-select-input-box {
        cursor: not-allowed;
      }
    }
  }

  // multi-select
  &.tagging-selection,
  &.multi-selection {
    .ngx-select-input-option {
      background: $color-chip-bg;
      color: $color-chip-text;
      border-radius: 5px;
      margin: 0 5px 5px 5px;
      height: 25px;
      line-height: 25px;
      padding: 0 10px;
      font-size: .9rem;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      cursor: text;
      transition: background 100ms ease-in;
      position: relative;
      padding-right: 20px;

      &:hover {
        background: $color-chip-hover-bg;
      }

      .ngx-select-input-name {
        text-shadow: 2px 4px 2px rgba(0, 0, 0, 0.1);
        max-width: 300px;
        overflow: hidden;
        display: inline-block;
        white-space: nowrap;
        text-overflow: ellipsis;
      }

      .ngx-select-clear {
        display: inline-block;
        vertical-align: bottom;
        font-size: 12px;
        color: $color-white;
        transition: color 100ms ease-in;
        cursor: pointer;
        position: absolute;
        right: 5px;
        top: 50%;
        transform: translateY(-50%);
        height: 30px;
        line-height: 35px;

        &:hover {
          color: $color-bg-darkest;
        }
      }

      &.disabled {
        padding-right: 10px;
      }
    }
  }

  // tagging
  &.tagging-selection {
    .ngx-select-input {
      .ngx-select-input-box {
        cursor: text;
      }

      .ng-select-text-box {
        background-color: transparent;
        border: none;
        outline: none;
        -webkit-appearance: none;
        color: $color-input-text;
        line-height: 35px;
        display: inline-block;
        height: 35px;
        vertical-align: bottom;
        margin-bottom: 5px;

        &:focus {
          outline: none;
        }
      }
    }
  }

  // single-select
  &.single-selection {
    .ngx-select-input {
      .ngx-select-input-list {
        .ngx-select-input-option {
          line-height: 35px;
          width: 100%;
          overflow: hidden;
          white-space: nowrap;
          text-overflow: ellipsis;
        }
      }

      .ngx-select-clear {
        position: absolute;
        top: 50%;
        right: 25px;
        transform: translateY(-50%);
        cursor: pointer;
        color: $color-caret-bg;
        font-size: 12px;
        
        &:hover {
          color: $color-white;
        }
      }
    }
  }

  // Input
  .ngx-select-input {
    display: block;
    position: relative;

    .ngx-select-input-box {
      background: transparent;
      border: none;
      margin-bottom: 0;
      padding-left: 0;
      width: 100%;
      color: $color-input-text;
      font-size: 16px;
      min-height: 35px;
      cursor: pointer;
    }
    
    .ngx-select-input-underline {
      width: 100%;
      height: 1px;
      background-color: $input-inactive-underline-fill;

      .underline-fill {
        background-color: $input-active-underline-fill;
        transition: width 250ms ease-out;
        width: 0;
        height: 2px;
        margin: 0 auto;
      }
    }

    .ngx-select-input-list {
      margin-right: 40px;
    }

    .ngx-select-caret {
      position: absolute;
      top: 50%;
      right: 5px;
      transform: translateY(-50%);
      cursor: pointer;
      color: $color-caret-bg;
      font-size: 12px;
    }

    .ngx-select-placeholder {
      position: absolute;
      top: 50%;
      left: 5px;
      transform: translateY(-50%);
      cursor: pointer;
      color: $color-placeholder-text;
    }
  }

  // Dropdown
  .ngx-select-dropdown {
    position: absolute;
    clear: left;
    top: 100%;
    left: 0;
    z-index: 1000;
    min-width: 300px;
    background: $color-dropdown-bg;
    box-shadow: $shadow-3;
    margin-top: 10px;
    opacity: 0;
    display: none;
    transition: visibility 0s, opacity .25s ease-out;

    .ngx-select-dropdown-options {
      max-height: 300px;
      overflow-y: auto;

      .ngx-select-dropdown-option {
        padding: 7px 15px;
        font-size: 16px;

        &:not(.disabled) {
          cursor: pointer;

          &:not(.selected) {
            &.active,
            &:hover {
              background: $color-hover-bg;
            }
          }
        }

        &.selected {
          background: $color-blue-med;
          color: $color-white;

          &:not(.disabled) {
            &.active,
            &:hover {
              background: $color-blue;
            }
          }
        }
      }
    }

    &.groupings {
      .ngx-select-option-group {
        .ngx-select-option-group-name {
          padding: 7px 15px;
          font-size: 18px;
          display: block;
          background: $color-group-bg;
          font-weight: bold;
        }
      }

      .ngx-select-dropdown-options {
        .ngx-select-dropdown-option {
          padding: 7px 25px;

          &:last-child {
            margin-bottom: 10px;
          }
        }
      }
    }

    .ngx-select-filter {
      padding: 10px;
      background: $color-filter-bg;

      .ngx-select-filter-input {
        color: $color-filter-text;
        background: transparent;
        border: none;
        outline: none;
        display: block;
        font-size: 16px;
        width: 100%;
      }
    }

    .ngx-select-empty-placeholder {
      color: $color-empty-text;
      padding: 7px 15px;
      font-size: 16px;
      font-style: italic;
    }
  }

  @keyframes openAnimation {
    0%   { transform: translateY(-25px); }
    100% { transform: translateY(0px); }
  }

}

